syntax = "proto3";

package rpc;
option go_package="./;rpc";

//创世块
message GenesisBlock{
	string CreateTimestamp = 1;  //创建时间戳
	string  KeyId =2; //key值
	int64 Height = 3; //创世区块就是区块高位为1
	string GenesisBlockHash = 4; //创世区块哈希值
	int32 DataCounts = 5; //数据交易量
	int64 DataSize =6; //总数据量大小
	int32 ChildBlockCount = 7; //子块数量
	string UpdateTimestamp = 8; //更新时间戳
	int64 cumulativeBlock=9; //累计区块总数
	string Version = 10; //创世区块版本号
	string BlockChainType =11 ; //目前主要三条链标示不同的链
	string LedgerType =12 ; //目前主要三条链标示不同的链
	string  CreateChainTimestamp  =13; //链创建时间
	int64  CumulativeValue =14; // 累计价值量
	int64  CumulativeNode=15; //      累计参与终端数
	int64  CumulativeUser=16; //   累计用户数
	int32 GroupMasterNodeCount =17; //集群master节点数量
	int32 GroupSlaveNodeCount =18; //集群slave节点数量
}
//存证数据
message DataReceipt {
    string CreateTimestamp = 1;
    string EntityId = 2;
    string KeyId =3;
    double ReceiptValue =4;
    string Version   =5;
    string UserName  =6;
    string OperationType =7;
    string DataType =8;
    string ServiceType =9;
    string FileName =10;
    double FileSize =11;
    string FileHash  =12;
    string Uri  =13;
    string  ParentKeyId=14;
    repeated string AttachmentFileUris=15;
    string AttachmentTotalHash=16;
}

//交易
message Transaction {
    string CreateTimestamp =1;
    string EntityId =2;
    string TransactionId  =3;
    string Initiator =4;
    string Receipt =5;
    double TxAmount =6;
    string DataType =7;
    string ServiceType =8;
    string Remark=9;
    string BlockIdentify=10;
 }
 message BlockHeader{
      string CreateTimestamp  =1;//创建时间戳
      string keyId =2;
      int64 BlockHeight = 3;//通过该字段，获取当前区块 可以使用不同链
      //具体数据结构类型
      string DataType =4;  //数据类型
      string DataValue =5; //数据价值
      string UpdateTimestamp =6 ;//更新时间戳
      string DataHash  =7; //数据哈希值
      string BlockHash = 8;//区块哈希值
      string PreBlockHash=9; //前一个区块hash值
      int32  Nonce =10; //nonce 值
      int32 Target =11;      //目标值
      int64 CurrentDataCount =12 ;//当前数据记录量
      int64 CurrentDataSize =13;//当前数据大小
      string Version  =14;//版本号
      string BlockType =15; //区块类型
      string LedgerType =16; //账本类型
 }
 message MinuteTxBlock {
      BlockHeader Header=1;
      repeated Transaction Transactions =2;//
 }
 message MinuteDataBlock{
      BlockHeader Header=1;
      repeated DataReceipt DataReceipts =2;//元数据
 }
 message TenMinuteTxBlock{
     string CreateTimestamp  =1;//创建时间戳
     string keyId =2;          //当前区块的key值
     string PreBlockHash =3; //前一个hash区块hash值
     string BlockHash =4; //前一个hash区块hash值
     int64 BlockHeight = 5;  //区块高度
     string BlockType = 6;   //区块类型
     string LedgerType = 7;  //账本类型
     repeated MinuteTxBlock Blocks  =8;
 }
 message DailyTxBlock{
     string CreateTimestamp  =1;//创建时间戳
     string keyId =2;          //当前区块的key值
     string PreBlockHash =3; //前一个hash区块hash值
     string BlockHash =4; //前一个hash区块hash值
     int64 BlockHeight = 5;  //区块高度
     string BlockType = 6;   //区块类型
     string LedgerType = 7;  //账本类型
     repeated TenMinuteTxBlock Blocks  =8;
 }
 message TenMinuteDataBlock{
     string CreateTimestamp  =1;//创建时间戳
     string keyId =2;          //当前区块的key值
     string PreBlockHash =3; //前一个hash区块hash值
     string BlockHash =4; //前一个hash区块hash值
     int64 BlockHeight = 5;  //区块高度
     string BlockType = 6;   //区块类型
     string LedgerType = 7;  //账本类型
     repeated MinuteDataBlock Blocks  =8;
 }
 message DailyDataBlock{
     string CreateTimestamp  =1;//创建时间戳
     string keyId =2;          //当前区块的key值
     string PreBlockHash =3; //前一个hash区块hash值
     string BlockHash =4; //前一个hash区块hash值
     int64 BlockHeight = 5;  //区块高度
     string BlockType = 6;   //区块类型
     string LedgerType = 7;  //账本类型
     repeated TenMinuteDataBlock Blocks  =8;
 }
 message Response {
    int32 errCode = 1; //错误码
    string errMsg = 2; //错误信息
}

//向TDengine 传送数据接口
//commitGenesisBlock(string ) response
service AccessLedgerService {
    rpc AddGenesisBlock(GenesisBlock) returns (Response) {}
    rpc AddMinuteBlock(MinuteTxBlock) returns (Response) {}
    rpc AddTenMinuteBlock(TenMinuteTxBlock) returns(Response){}
    rpc AddDailyBlock(DailyTxBlock) returns(Response){}
 }
 service NodeLedgerService{
     rpc AddGenesisBlock(GenesisBlock) returns (Response) {}
     rpc AddMinuteBlock(MinuteTxBlock) returns (Response) {}
     rpc AddTenMinuteBlock(TenMinuteTxBlock) returns(Response){}
     rpc AddDailyBlock(DailyTxBlock) returns(Response){}
 }
 service SensorLedgerService{
     rpc AddGenesisBlock(GenesisBlock) returns (Response) {}
     rpc AddMinuteBlock(MinuteTxBlock) returns (Response) {}
     rpc AddTenMinuteBlock(TenMinuteTxBlock) returns(Response){}
     rpc AddDailyBlock(DailyTxBlock) returns(Response){}
 }
 ///存证数据
 service UserLedgerService{
     rpc AddGenesisBlock(GenesisBlock) returns (Response) {}
     rpc AddMinuteBlock(MinuteDataBlock) returns (Response) {}
     rpc AddTenMinuteBlock(TenMinuteDataBlock) returns(Response){}
     rpc AddDailyBlock(DailyDataBlock) returns(Response){}
 }
 service VideoLedgerService{
     rpc AddGenesisBlock(GenesisBlock) returns (Response) {}
     rpc AddMinuteBlock(MinuteDataBlock) returns (Response) {}
     rpc AddTenMinuteBlock(TenMinuteDataBlock) returns(Response){}
     rpc AddDailyBlock(DailyDataBlock) returns(Response){}
 }

 //////////////////////查询数据接口///////////////////////
//主要四类数据的获取和返回
message RequestDataBatch {
    string ledgerType =1;
    string blockChainType=2;
    string dataType=3; //block genesisblock  receipt transaction 四种类型
    int32 num=4; //获取最新的num个区块数据
}
message ResponseDataBatchBlock{
    int32 errCode = 1; //错误码
    string errMsg = 2; //错误信息
    string dataType=3;//数据类型
    int32 length=4;//实际上获取到数据数目
    repeated bytes data = 5;//数据的序列化
}

message RequestTx {
    string ledgerType =1;
    string blockChainType=2;
    string transactionId=3;
    int64 height=4;//区块高度
}
message ResponseTx{
    int32 errCode = 1; //错误码
    string errMsg = 2; //错误信息
    Transaction tx=3;//交易
}
message RequestDataReceipt {
    string ledgerType =1;
    string blockChainType=2;
    string keyId=3;//key 这个值暂时是etcd的key值是一样的
    int64 height=4;//区块高度
}
message ResponseDataReceipt{
    int32 errCode = 1; //错误码
    string errMsg = 2; //错误信息
    repeated DataReceipt receipt=3;//数据
}
message RequestBlock {
    string ledgerType =1;
    string blockChainType=2;
    int64 height=3;//区块高度
    string KeyId=4;
}
message ResponseBlock{
    int32 errCode = 1; //错误码
    string errMsg = 2; //错误信息
    bytes block=3;//数据
}
message RequestGenesisBlock {
    string ledgerType =1;
    string blockChainType=2;
    string hash=3;
}
message ResponseGenesisBlock{
    int32 errCode = 1; //错误码
    string errMsg = 2; //错误信息
    GenesisBlock genesisBlock=4;//数据
}
service QueryService{
   rpc queryBlockBatch(RequestDataBatch) returns (ResponseDataBatchBlock) {}
   rpc queryBlock(RequestBlock) returns(ResponseBlock){}
   rpc queryGenesisBlock(RequestGenesisBlock) returns(ResponseGenesisBlock){}
   rpc queryTx(RequestTx) returns (ResponseTx) {}
   rpc queryDataReceipt(RequestDataReceipt) returns(ResponseDataReceipt){}
}
//////////////////////上面是查询数据接口///////////////////////

//接收redis传过来的数据  五类账本
//node_credible video sensor user_behaviour service_access
service ToUpper {
	rpc Upper(UpperRequest) returns (UpperReply) {}//测试接口

    rpc NodeCredible(NodeCredibleData) returns (Response) {}//存证
    rpc Video(VideoData) returns (Response) {}//存证
    rpc Sensor(SensorData) returns (Response) {}//存证
    rpc UserBehaviour(UserBehaviourData) returns (Response) {}//交易
    rpc ServiceAccess(ServiceAccessData) returns (Response) {}//交易
}

message UpperRequest {
	string name = 1;
}

message UpperReply {
	string message = 1;
}
/*
存证：video userBehaviour
交易：nodeCredibility Sensor ServiceAccess
*/
message VideoData {
	repeated DataReceipt DataReceipts  = 1;
}
message UserBehaviourData {
	repeated DataReceipt DataReceipts = 1;
}

message NodeCredibleData {
	repeated Transaction Transactions  = 1;
}

message SensorData {
	repeated Transaction Transactions  = 1;
}

message ServiceAccessData {
	repeated Transaction Transactions = 1;
}